--- a/css/style.css
+++ b/css/style.css
@@ -729,8 +729,11 @@ img {
   position: fixed;
   left: 0;
   top: 0;
+  z-index: 3;
+
   width: 100vw;
   height: 100vh;
+  
   background: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
