--- a/css/style.css
+++ b/css/style.css
@@ -144,11 +144,14 @@ img {
   font-size: 14px;
 }
 .site-nav .link {
+  
   display: block;
 
   padding-top: 32px;
   padding-bottom: 32px;
 }
+
+
 /* .site-nav .item {
   margin-right: 50px;
 }
@@ -240,37 +243,40 @@ img {
 }
 
 .site-nav .studio.current {
+  position: relative;
   color: var(--accent-color);
+  /* padding-bottom: 32px; */
+ 
 }
-.studio.current::after {
+.link.studio.current::after {
   position: absolute;
   content: '';
   display: block;
   background-color: #2196F3;
   height: 4px;
-  width: 48px;
+  width: 100%;
 
-  left: 0;
-  top: 76px;
+  bottom: 0;
 
   border-radius: 2px;
 }
 
-.portfolio.current::after{
+.portfolio.current::after {
   position: absolute;
   content: '';
   display: block;
   background-color: #2196F3;
   height: 4px;
-  width: 80px;
+  width: 100%; 
 
-  left: 100px;
-  top: 76px;
-
+  bottom: 0;
+  
   border-radius: 2px;
+
 }
 
 .site-nav .portfolio.current {
+  position: relative;
   color: var(--accent-color);
 }
 
@@ -420,6 +426,10 @@ img {
 }
 
 .main-projects .item {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-basis: calc(100% / 3 - var(--card-set-gap));
 
   margin-left: var(--card-set-gap);
@@ -428,6 +438,9 @@ img {
 .main-projects-content {
   position: absolute;
   bottom: 0px;
+
+  width: 100%;
+  
 
   background: rgba(47, 48, 58, 0.8);
   
@@ -439,16 +452,10 @@ img {
   text-transform: uppercase;
   
   color: #FFFFFF;
+  padding-top: 27px;
+  padding-bottom: 27px;
 }
-.main-projects-content.label-1 {
-  padding: 27px 82px;
-}
-.main-projects-content.label-2 {
-  padding: 27px 85px;
-}
-.main-projects-content.label-3 {
-  padding: 27px 90px;
-}
+
 
 .projects .all-title,
 .team .all-title,
@@ -537,11 +544,12 @@ img {
 
   margin-top: 16px;
 }
+.social-link-list:not(:last-child) {
+  margin-right: 10px;
+}
 
 .social-link-list .circle {
   display: flex;
-
-  margin-right: 10px;
 
   align-items: center;
   height: 44px;
@@ -581,12 +589,11 @@ img {
   margin-left: 30px;
   margin-top: 50px;
 }
-.item .thumb {
-  display: flex;
 
+.clients-link-logo {
+  display: flex;
   justify-content: center;
   align-items: center;
-
   border: 1px solid #afb1b8;
   border-radius: 4px;
   width: 170px;
@@ -599,18 +606,16 @@ img {
 
   cursor: pointer;
 }
-.item .thumb:hover .clients-logo,
-.logo-focus:focus .clients-logo {
-  /*  */
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.clients-link-logo:hover .clients-logo,
+.clients-link-logo:focus .clients-logo {
   fill: var(--accent-color);
 }
-.item .thumb:hover {
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  border: 1px solid #2196f3;
-  border-radius: 4px;
+.clients-link-logo:hover,
+.clients-link-logo:focus {
+  outline-color: #188ce8;
+  border: 1px solid #188ce8;
 }
+
 
 
 /* footer */
@@ -730,10 +735,8 @@ img {
   left: 0;
   top: 0;
   z-index: 3;
-
   width: 100vw;
   height: 100vh;
-  
   background: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
@@ -896,7 +899,10 @@ img {
   cursor: pointer;
 }
 
-
+.card-item-overlay {
+  position: relative;
+  overflow: hidden;
+}
 .card-description {
   position: absolute;
   top: 50%;
@@ -931,7 +937,7 @@ img {
   overflow: visible;
   visibility: visible;
 
-  transform: translate(-50%, -68%);
+  transform: translate(-50%, -50%);
   /* background-size: 100%; */
   
 }
