--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@
   --portfolio-button-active: #ffffff;
   --portfolio-button-background: #f5f4fa;
   --card-set-gap: 30px;
-  --modal-background: #FFFFFF;
+  --modal-background: #ffffff;
 }
 /* Устанавливаем стандартные цвета 
 и шрифты */
@@ -78,7 +78,7 @@ p {
   padding: 0;
 }
 .link {
-  text-decoration: none
+  text-decoration: none;
 }
 /* Картинкам меняем дисплей, 
 что бы убрать стандартный отступы 
@@ -144,13 +144,11 @@ img {
   font-size: 14px;
 }
 .site-nav .link {
-  
   display: block;
 
   padding-top: 32px;
   padding-bottom: 32px;
 }
-
 
 /* .site-nav .item {
   margin-right: 50px;
@@ -246,13 +244,12 @@ img {
   position: relative;
   color: var(--accent-color);
   /* padding-bottom: 32px; */
- 
 }
 .link.studio.current::after {
   position: absolute;
-  content: '';
+  content: "";
   display: block;
-  background-color: #2196F3;
+  background-color: #2196f3;
   height: 4px;
   width: 100%;
 
@@ -263,23 +260,21 @@ img {
 
 .portfolio.current::after {
   position: absolute;
-  content: '';
+  content: "";
   display: block;
-  background-color: #2196F3;
+  background-color: #2196f3;
   height: 4px;
-  width: 100%; 
+  width: 100%;
 
   bottom: 0;
-  
-  border-radius: 2px;
 
+  border-radius: 2px;
 }
 
 .site-nav .portfolio.current {
   position: relative;
   color: var(--accent-color);
 }
-
 
 /* Основной блок */
 .all-title {
@@ -291,7 +286,7 @@ img {
   /* display: flex;
   flex-direction: column;
   justify-content: center; */
-  
+
   margin: 0 auto;
 
   background-color: var(--main-title-backround);
@@ -344,7 +339,6 @@ img {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   border: none;
-
 }
 
 .main .main-button:hover,
@@ -440,22 +434,20 @@ img {
   bottom: 0px;
 
   width: 100%;
-  
 
   background: rgba(47, 48, 58, 0.8);
-  
+
   font-weight: 700;
   font-size: 14px;
   line-height: 16px;
   text-align: center;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  
-  color: #FFFFFF;
+
+  color: #ffffff;
   padding-top: 27px;
   padding-bottom: 27px;
 }
-
 
 .projects .all-title,
 .team .all-title,
@@ -569,7 +561,8 @@ img {
 
 .circle:hover,
 .circle:focus {
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   background-color: var(--accent-color);
   fill: #ffffff;
@@ -615,8 +608,6 @@ img {
   outline-color: #188ce8;
   border: 1px solid #188ce8;
 }
-
-
 
 /* footer */
 
@@ -704,10 +695,12 @@ img {
 
 .join-title {
   margin-bottom: 20px;
-
+}
+.join-title,
+.footer-subscribe-text {
   font-weight: 700;
   font-size: 14px;
-
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
@@ -730,6 +723,72 @@ img {
 
   background: #2196f3;
 }
+/* ---------FOOTER RIGHT SIDE____ */
+.footer-right-side {
+  /* display: flex; */
+  margin-left: 93px;
+  padding-top: 12px;
+}
+.footer-subscribe-form {
+  display: flex;
+
+  align-items: center;
+}
+.footer-subscribe-text {
+  margin-bottom: 20px;
+}
+.subscribe-input {
+  width: 358px;
+  height: 50px;
+
+  padding-left: 16px;
+  margin-right: 12px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  color: #ffffff;
+  background-color: inherit;
+}
+.subscribe-input::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.button-subscribe {
+  max-width: 200px;
+  height: auto;
+
+  padding: 10px 28px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+
+  color: #ffffff;
+  background-color: var(--accent-color);
+
+  transition: box-shadow 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+
+  cursor: pointer;
+}
+.button-subscribe:hover,
+.button-subscribe:focus {
+  box-shadow: 0px 4px 52px rgba(0, 0, 0, 0.15);
+}
+.icon-telegram {
+  width: 24px;
+  height: 24px;
+
+  margin-left: 10px;
+  vertical-align: middle;
+
+  fill: #ffffff;
+}
+
 .backdrop {
   position: fixed;
   left: 0;
@@ -749,19 +808,18 @@ img {
 }
 .backdrop.is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.9);
-
 }
 .modal {
   position: absolute;
   left: 50%;
   top: 50%;
 
-  
   min-width: 528px;
   min-height: 581px;
 
-  background: #FFFFFF;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
   padding-left: 15px;
@@ -769,18 +827,15 @@ img {
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 .modal-close {
   position: absolute;
   right: 8px;
   top: 8px;
 
-
   width: 30px;
   height: 30px;
 
-  
   background: var(--modal-background);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
@@ -789,10 +844,10 @@ img {
 }
 .modal-close .icon-close {
   position: absolute;
-  
+
   right: 20%;
   top: 20%;
- 
+
   width: 18px;
   height: 18px;
 }
@@ -845,7 +900,8 @@ img {
 
   cursor: pointer;
 
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-buttons {
   display: flex;
@@ -890,7 +946,7 @@ img {
   margin-top: var(--card-set-gap);
 }
 .card-set .item:hover,
-.card-focus:focus .item{
+.card-focus:focus .item {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
@@ -908,43 +964,35 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, 50%);
- 
+
   visibility: hidden;
-  
 
   width: 100%;
   height: 298px;
 
   padding: 63px 24px;
-  
+
   background: rgba(33, 150, 243, 0.9);
 
   font-weight: 400;
   font-size: 18px;
   line-height: 1.55;
-/* or 156% */
-  color: #FFFFFF;
+  /* or 156% */
+  color: #ffffff;
 
   letter-spacing: 0.03em;
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .item:hover .card-description,
 .card-focus:focus .card-description {
-  
   overflow: visible;
   visibility: visible;
 
   transform: translate(-50%, -50%);
   /* background-size: 100%; */
-  
 }
-
-
-
-
 
 .project-card-disagn {
   padding: 20px 24px;
