--- a/css/style.css
+++ b/css/style.css
@@ -814,7 +814,7 @@ img {
   left: 50%;
   top: 50%;
 
-  min-width: 528px;
+  max-width: 528px;
   min-height: 581px;
 
   background: #ffffff;
@@ -822,12 +822,118 @@ img {
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
 
-  padding-left: 15px;
-  padding-right: 15px;
+  padding: 40px 40px;
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.modal-text-title {
+  margin-bottom: 12px;
+
+  text-align: center;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+.modal-label {
+  display: block;
+  padding-bottom: 4px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.01em;
+
+  color: #757575;
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 42px;
+  margin-bottom: 10px;
+}
+.modal-user-comments {
+  resize: none;
+
+  padding: 12px 16px;
+  width: 100%;
+  min-height: 120px;
+  margin-bottom: 20px;
+}
+.modal-user-comments::placeholder {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+.user-agree-policy::before {
+  display: block;
+  content: "";
+  width: 16px;
+  height: 16px;
+  outline: 1px solid black;
+}
+.user-agree-policy {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+.modal-form-button {
+  display: block;
+  max-width: 200px;
+  min-height: 50px;
+
+  margin-top: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 10px 56px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+
+  color: #ffffff;
+  background-color: var(--accent-color);
+
+  transition: box-shadow 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+
+  cursor: pointer;
+}
+.user-name-thumb,
+.user-phone-thumb,
+.user-email-thumb {
+  position: relative;
+}
+.icon-modal {
+  display: block;
+  margin-left: 12px;
+
+  width: 18px;
+  height: 18px;
+}
+.icon-person-modal,
+.icon-phone-modal,
+.icon-email-modal {
+  position: absolute;
+
+  left: 0;
+  top: 0;
+}
+
 .modal-close {
   position: absolute;
   right: 8px;
@@ -853,7 +959,7 @@ img {
 }
 .modal-close:hover .icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  fill: red;
+  fill: var(--accent-color);
 }
 
 /* Страница Портфолио */
