--- a/css/style.css
+++ b/css/style.css
@@ -593,7 +593,7 @@ img {
   height: 92px;
 }
 .item .clients-logo {
-  width: 106px;
+  width: 100%;
   height: 60px;
   fill: #afb1b8;
 
@@ -1074,7 +1074,7 @@ img {
   visibility: hidden;
 
   width: 100%;
-  height: 298px;
+  height: 100%;
 
   padding: 63px 24px;
 
