--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
   padding-right: 15px;
   margin: 0 auto;
 }
-/* Пречет тэг */
+/* Преячет тэг */
 .visually-hidden {
   position: absolute !important;
   clip: rect(1px 1px 1px 1px);
@@ -855,6 +855,21 @@ img {
   height: 40px;
   padding-left: 42px;
   margin-bottom: 10px;
+  /* transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1); */
+}
+.user-name-thumb:hover .icon-modal,
+.user-phone-thumb:hover .icon-modal,
+.user-email-thumb:hover .icon-modal,
+.modal-input .icon-modal:focus,
+.user-name-thumb:focus .icon-modal,
+.user-phone-thumb:focus .icon-modal {
+  fill: var(--accent-color);
+}
+.modal-input:hover,
+.modal-input:focus {
+  outline: none;
+  border: 1px solid #2196f3;
+  border-radius: 4px;
 }
 .modal-user-comments {
   resize: none;
@@ -872,14 +887,30 @@ img {
 
   color: rgba(117, 117, 117, 0.5);
 }
-.user-agree-policy::before {
+
+.check-wrap {
+  display: inline-block;
+
+  margin-right: 8px;
+  width: 16px;
+  height: 15px;
+  outline: 2px solid black;
+}
+.icon-agree {
+  fill: #ffffff;
   display: block;
-  content: "";
   width: 16px;
   height: 16px;
-  outline: 1px solid black;
 }
+
+.modal-form-checkbox:checked + .user-agree-policy .check-wrap {
+  background-color: var(--accent-color);
+}
+
 .user-agree-policy {
+  display: block;
+  text-align: center;
+
   font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
