--- a/css/style.css
+++ b/css/style.css
@@ -771,14 +771,20 @@ img {
   color: #ffffff;
   background-color: var(--accent-color);
 
-  transition: box-shadow 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   cursor: pointer;
 }
 .button-subscribe:hover,
 .button-subscribe:focus {
-  box-shadow: 0px 4px 52px rgba(0, 0, 0, 0.15);
+  /* border-color: #188ce8; */
+  outline-color: #188ce8;
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
+
 .icon-telegram {
   width: 24px;
   height: 24px;
@@ -841,7 +847,9 @@ img {
 }
 .modal-label {
   display: block;
+
   padding-bottom: 4px;
+
   font-weight: 400;
   font-size: 12px;
   line-height: 1;
@@ -855,16 +863,17 @@ img {
   height: 40px;
   padding-left: 42px;
   margin-bottom: 10px;
+  cursor: pointer;
+
   /* transition: border 150ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 .user-name-thumb:hover .icon-modal,
 .user-phone-thumb:hover .icon-modal,
 .user-email-thumb:hover .icon-modal,
-.modal-input .icon-modal:focus,
-.user-name-thumb:focus .icon-modal,
-.user-phone-thumb:focus .icon-modal {
+.modal-input:focus + .icon-modal {
   fill: var(--accent-color);
 }
+
 .modal-input:hover,
 .modal-input:focus {
   outline: none;
@@ -902,7 +911,10 @@ img {
   width: 16px;
   height: 16px;
 }
-
+.check-wrap:focus,
+.check-wrap:hover {
+  outline: 2px solid var(--accent-color);
+}
 .modal-form-checkbox:checked + .user-agree-policy .check-wrap {
   background-color: var(--accent-color);
 }
@@ -934,15 +946,24 @@ img {
   line-height: 1.87;
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
   border-radius: 4px;
   border: none;
 
   color: #ffffff;
   background-color: var(--accent-color);
 
-  transition: box-shadow 250ms cubic-bezier(0.075, 0.82, 0.165, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   cursor: pointer;
+}
+
+.modal-form-button:hover,
+.modal-form-button:focus {
+  background: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
 }
 .user-name-thumb,
 .user-phone-thumb,
@@ -987,9 +1008,14 @@ img {
 
   width: 18px;
   height: 18px;
-}
-.modal-close:hover .icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close:focus {
+  outline: 2px solid var(--accent-color);
+}
+
+.modal-close:hover .icon-close,
+.modal-close:focus .icon-close {
   fill: var(--accent-color);
 }
 
